--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -3,3 +3,7 @@ $lightPink: #ffecf3;
 $black: #6b6466;
 $white: #fbfbfb;
 $gray: #b3b0b1;
+$red: #e60938;
+$green: #39ed8d;
+$darkPink: #dba0b7;
+$lightGray: #d9d9d9;
