--- a/src/scss/components/_auth.scss
+++ b/src/scss/components/_auth.scss
@@ -1,6 +1,6 @@
 @import '../variable';
 
-.wrapper {
+.block {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -9,8 +9,8 @@
 	background: $pink;
 }
 
-.form {
-	width: 440px;
+.auth {
+	$self: &;
 
 	&__logo {
 		display: flex;
@@ -27,12 +27,14 @@
 		}
 	}
 	&__bg {
-		min-height: 440px;
+
+		width: 440px;
+		height: 440px;
 		margin-top: 20px;
 		background: $lightPink;
 		border-radius: 5px;
 	}
-	&__wrapper {
+	&__block {
 		padding: 60px 0;
 		margin: 60px auto;
 		margin-top: 0;
@@ -77,20 +79,63 @@
 			font-weight: 500;
 		}
 	}
-	form {
-		input {
-			width: 100%;
-			border: 2px solid $black;
-			margin-top: 20px;
-			padding: 0.7em 2em;
-			background: url(../../assets/img/padlock.svg) no-repeat 0.5em 0.7em;
-			background-size: 16px 16px;
-			transition: all linear 0.1s;
+	&__form {
+		&-field {
+			position: relative;
+			margin-top: 25px;
 			&:first-child {
 				margin-top: 40px;
 			}
-			&:focus {
-				border: 2px solid $pink;
+			&-input {
+				width: 100%;
+				border: 2px solid $black;
+				padding: 0.7em 2em;
+				transition: all linear 0.1s;
+				&:focus {
+					border: 2px solid $pink;
+				}
+				&-email {
+					background: url(../../assets/img/envelope.svg) no-repeat 0.5em 0.7em;
+					background-size: 15px 15px;
+					background-color: $white;
+					&-error {
+						border: 2px solid $red;
+					}
+					&-feedback {
+						position: absolute;
+						bottom: -50%;
+						color: $red;
+						transition: all 0.2s linear;
+					}
+				}
+				&-password {
+					background: url(../../assets/img/padlock.svg) no-repeat 0.5em 0.7em;
+					background-size: 15px 15px;
+					background-color: $white;
+					&-error {
+						border: 2px solid $red;
+					}
+					&-feedback {
+						position: absolute;
+						bottom: -50%;
+						color: $red;
+						transition: all 0.2s linear;
+					}
+				}
+				&-username {
+					background: url(../../assets/img/user.svg) no-repeat 0.5em 0.7em;
+					background-size: 14px 14px;
+					background-color: $white;
+					&-error {
+						border: 2px solid $red;
+					}
+					&-feedback {
+						position: absolute;
+						bottom: -50%;
+						color: $red;
+						transition: all 0.2s linear;
+					}
+				}
 			}
 		}
 		p {
@@ -110,7 +155,7 @@
 	}
 	&__btn {
 		font-size: 1.1rem;
-		margin-top: 20px;
+		margin-top: 40px;
 		width: 100%;
 		background: $pink;
 		color: $white;
